from enum import IntEnum

class HumanPlayer(IntEnum):
  """This is a player class. Represents human players of Reversi games
  """
  X = 1
  O = 2

class AIPlayer(IntEnum):
  """This is a AI player class. Represents computer players of Reversi games
  """
  O = 2

